<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:entries="@array/temperature_unit_labels"
        android:entryValues="@array/temperature_units"
        android:defaultValue="@string/temperature_units_metric" />

    <CheckBoxPreference
        android:title="@string/pref_notification_label"
        android:key="@string/pref_notification_key"
        android:defaultValue="true"/>
</PreferenceScreen>